--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!--
  * @Author: your name
  * @Date: 2021-01-07 09:49:29
- * @LastEditTime: 2021-01-07 11:00:21
+ * @LastEditTime: 2021-03-15 17:36:25
  * @LastEditors: Please set LastEditors
  * @Description: In User Settings Edit
  * @FilePath: \element_vue3.0\public\index.html
@@ -11,7 +11,7 @@
     <head>
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+        <!-- <meta name="viewport" content="width=device-width,initial-scale=1.0" /> -->
         <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
         <title><%= htmlWebpackPlugin.options.title %></title>
     </head>
