--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
  * @LastEditTime: 2021-03-15 17:36:25
  * @LastEditors: Please set LastEditors
  * @Description: In User Settings Edit
- * @FilePath: \element_vue3.0\public\index.html
+ * @FilePath: \vue3-element-admin\public\index.html
 -->
 <!DOCTYPE html>
 <html lang="zh-cn">
